@@ -11,7 +11,7 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclGet.c,v 1.18 2007/11/11 19:32:15 msofer Exp $
+ * RCS: @(#) $Id: tclGet.c,v 1.19 2007/11/12 22:05:59 hobbs Exp $
  */
 
 #include "tclInt.h"
@@ -50,7 +50,7 @@ Tcl_GetInt(
     obj.length = strlen(src);
     obj.typePtr = NULL;
 
-    code = TclGetIntFromObj(interp, &obj, intPtr);
+    code = Tcl_GetIntFromObj(interp, &obj, intPtr);
     if (obj.refCount > 1) {
 	Tcl_Panic("invalid sharing of Tcl_Obj on C stack");
     }
@@ -94,7 +94,7 @@ TclGetLong(
     obj.length = strlen(src);
     obj.typePtr = NULL;
 
-    code = TclGetLongFromObj(interp, &obj, longPtr);
+    code = Tcl_GetLongFromObj(interp, &obj, longPtr);
     if (obj.refCount > 1) {
 	Tcl_Panic("invalid sharing of Tcl_Obj on C stack");
     }
