@@ -1,5 +1,8 @@
 2007-11-12  Jeff Hobbs  <jeffh@ActiveState.com>
 
+	* generic/tclGet.c (Tcl_Get, Tcl_GetInt): revert use of TclGet*
+	macros due to compiler warning.  These cases won't save time either.
+
 	* generic/tclUtil.c (TclReToGlob): add more comments, set interp
 	result if specified on error.
 
